Closed
Bug 192276
Opened 23 years ago
Closed 20 years ago
"control click" on plugin brings up browser context menu
Categories
(Camino Graveyard :: Plug-ins, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.9
People
(Reporter: tracy, Assigned: sfraser_bugs)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
713 bytes,
patch
|
mikepinkerton
:
review+
|
Details | Diff | Splinter Review |
seen with recent chimera builds
-open a page with a flash animation
-control click the animation
tested results: the browser context menu appears
expected results: the flash context menu should appear.
I back tested this and discovered that this regressed between the builds for
2003-01-27-07(works) and 2003-01-28-07(broken since this build)
Comment 1•23 years ago
|
||
Also occurs with embedded QT movies. Tested under 10.1.5 and 10.2.3.
http://www.apple.com/switch/ads/tonyhawk.html
Updated•23 years ago
|
Severity: major → critical
Comment 2•23 years ago
|
||
Same problem with Real content too. No plugin contextual menu when using control
click:
http://www.weather.com/activities/verticalvideo/vdaily/weekendoutlook.html?from=nchomepage
Comment 3•23 years ago
|
||
generalizing the summary. could this be a recent regression?
Summary: "control click" on Flash animation brings up browser Context Menu → "control click" on plugin brings up browser context menu
Assignee | ||
Comment 5•23 years ago
|
||
Taking. Note that a right-click with a two-button mouse works, but a
control-clickk doesn't.
Assignee: peterlubczynski → sfraser
Assignee | ||
Comment 6•23 years ago
|
||
Comment 7•22 years ago
|
||
well, we have no plugin-specific context menu. before my change, we'd show
nothing. now we always show a context menu. i think that's perfectly valid. so
is this bug that we show something at all, or we show the default document
context menu. If it's the latter, I'd vote future.
Assignee | ||
Comment 8•22 years ago
|
||
You can't tell if you have a plugin-specific context menu. The control-click has
to get down to the plugin, which displays the menu when handling the event.
Status: NEW → ASSIGNED
Comment 9•22 years ago
|
||
*** Bug 158345 has been marked as a duplicate of this bug. ***
Comment 10•22 years ago
|
||
This problem really needs to get fixed since it's affects people with a single
mouse button or a ibook/powerbook user using their trackpad (like me)...
Comment 11•22 years ago
|
||
still true with 2003090102 on 10.2.6
Comment 12•21 years ago
|
||
Nomimating this issue for 0.8. This is a pain for a powerbook/ibook user
attempting to use the trackpad display the plugin's contextual menu.
Target Milestone: --- → Camino0.8
Comment 13•21 years ago
|
||
Still true 20040319 NB.
Comment 14•21 years ago
|
||
I don't know if the following is related to this bug, because it is in a
different context. However, the effect is the same.
Camino draws the browser context menu even when it has been disabled with
JavaScript (for example, to implement my own context menu).
Here is a test case (control- or right-click on the text "CHAPTER EXAMPLE")
http://www.yellowspace.net/camino_tests/cm.html
Here is a screenshot of what I see:
http://www.yellowspace.net/camino_tests/cm_shot.png
The same page works fine with recent (release 0.8/1.6 and nighties) od FireFox
and Mozilla, Mac and Win alike.
Happens on Camino 2004051308 (v0.8b) and "below".
Updated•21 years ago
|
Target Milestone: Camino0.8 → Camino1.0
Assignee | ||
Comment 15•21 years ago
|
||
Note that right-click works, but control-click doesn't.
See also the similar bug 242906 for general misbehavior with CMs on OBJECTs and
EMBEDs.
Assignee | ||
Updated•20 years ago
|
Priority: -- → P2
Assignee | ||
Comment 17•20 years ago
|
||
Attachment #190372 -
Flags: review?(pinkerton)
Assignee | ||
Updated•20 years ago
|
Severity: critical → major
Target Milestone: Camino1.0 → Camino0.9
Comment 18•20 years ago
|
||
*** Bug 298458 has been marked as a duplicate of this bug. ***
Comment 19•20 years ago
|
||
Comment on attachment 190372 [details] [diff] [review]
Patch: return nil from menuForEvent for plugin views
okies. r=pink
Attachment #190372 -
Flags: review?(pinkerton) → review+
Assignee | ||
Comment 20•20 years ago
|
||
Fixed.
Assignee | ||
Updated•20 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•